test-cases/negative/test_047_invalid_object_property.lay
# negative test: invalid property in object creation
# expected: error should be thrown

the variable person of type Person is a new Person with
  invalid_property is 'value'


